crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__month__multiple__range_periodic__range_periodic.snap
---
source: crates/tools/cron/src/tests/unit/month.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        March,
                    ),
                    periodic: MonthPeriodic(
                        2,
                    ),
                },
                MonthKind {
                    range: (
                        May,
                        July,
                    ),
                    periodic: MonthPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
