crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__month__multiple__range_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/month.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        March,
                    ),
                    periodic: MonthPeriodic(
                        2,
                    ),
                },
                MonthKind {
                    range: (
                        May,
                        May,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
